# QtApp-Sandbox

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: QtApp-Sandbox.yml
cmake/modules/: ClangFormat.cmake  MakeDoc.cmake  myVariables.cmake
include/QtApp/: ConfigPanel.hpp  Constant.hpp  Tools.hpp  Window.hpp
include/QtApp/Abstraction/: APage.hpp  IPage.hpp
include/QtApp/Page/: MainPage.hpp  MusicPlayerPage.hpp
resources/: resources.qrc
src/: configPanel.cpp  main.cpp  window.cpp
src/Page/: mainPage.cpp  musicPlayerPage.cpp
style/: dark_theme.qss  light_theme.qss  style.qss
